# ld56

./: .gitignore  CMakeLists.txt  README.md  clean.sh
include/: agent.hpp  ant.hpp  baddie.hpp  display.hpp  game.hpp  goop.hpp  logging.hpp  mesh.hpp  primitives.hpp  renderable.hpp  renderer.hpp  scene.hpp  shader.hpp  shaders.hpp  text_rendering.hpp
include/glad/: gl.h
shaders/: basic.frag  basic.vert  text.frag  text.vert
src/: agent.cpp  ant.cpp  baddie.cpp  display.cpp  game.cpp  goop.cpp  main.cpp  mesh.cpp  renderable.cpp  renderer.cpp  text_rendering.cpp
